# medgemma-triage

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  MULTI-AGENT-HUMAN_COORDINATION.md  README.md  TEAM-PLAYBOOK.md  langgraph.json  pyproject.toml  requirements.txt
.claude/agents/: hackathon-strategist.md
.claude/skills/start-issue/: SKILL.md
.claude/skills/submit-work/: SKILL.md
.claude/skills/team-workflow/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_ops.pckl
.streamlit/: config.toml
data/sample_cases/: case_01_chest_pain.json  case_02_pediatric_fever.json  case_03_ankle_sprain.json  case_04_dor_toracica.json  case_05_febre_pediatrica.json  case_06_entorse_tornozelo.json  case_07_sore_throat.json  case_08_minor_laceration.json  case_09_prescription_refill.json  case_10_dor_garganta.json  case_11_laceracaodedo.json  case_12_receita_medicamento.json  cases.py
docs/: hackathon-strategy-report.md  team-workflow.md  write-up.md
src/agents/: documentation.py  image_reader.py  intake.py  triage.py
src/fhir/: builder.py
src/models/: medgemma.py
src/pipeline/: orchestrator.py
src/ui/: app.py  mock_services.py  strings.py
tests/: conftest.py
tests/test_agents/: test_image_reader.py  test_intake.py  test_triage.py
tests/test_e2e/: test_full_pipeline.py
tests/test_models/: test_medgemma.py
tests/test_pipeline/: test_orchestrator.py
tests/test_ui/: test_mock_services.py
